--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,12 @@
             <img src="./assets/logo.png" />
         </div>
         <div class="menu">
-            <button><a href="./index.html" class="active">HOME</a></button>
-            <button><a href="https://instagram.com/habilihsanproject">INSTAGRAM</a></button>
+            <button><a href="./index.html">HOME</a></button>
+            <button><a href="./contact.html" class="active">CONTACT</a></button>
         </div>
     </div>
     <div class="container">
-        <img src="./assets/slides/banner.png" />
+        FIND US ON INSTAGRAM
     </div>
 
 </body>
