--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <div class="header">
             <div class="logo">
                 <img src="./assets/logo.png" />
+                <img style="width: 13%;" src="./assets/title.png" />
             </div>
             <div class="menu">
                 <button><a href="./index.html" class="active">HOME</a></button>
@@ -16,8 +17,17 @@
             </div>
         </div>
         <div class="container">
-            <img src="./assets/slides/banner.png" />
+            <img src="./assets/slides/2.jpg" />
+            <div class="project">
+                <img src="./assets/nebula.png" />
+                <p>P R O J E C T</p>
+                <br/>
+                <h1>coming soon...</h1>
+            </div>
         </div>
-    
     </body>
+    <footer>
+        <p>© 2023</p>
+        <img src="./assets/powered.png" mail />
+    </footer>
 </html>
