--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
             </div>
         </div>
         <div class="container">
-            <img src="./assets/slides/2.jpg" />
             <div class="project">
                 <img src="./assets/nebula.png" />
-                <p>P R O J E C T</p>
+                <h1>P R O J E C T</h1>
                 <br/>
-                <h1>coming soon...</h1>
+                <blink>coming soon...</blink>
             </div>
         </div>
     </body>
