--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </body>
     <footer>
         <p>© 2023</p>
-        <img src="./assets/powered.png" mail />
+        <img src="./assets/powered.png"/>
     </footer>
 </html>
 
