--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <link href="./style.css" type="text/css" rel="stylesheet" />
     </head>
     <body>
-        <div id="particles-js"></div>
         <div class="header">
             <div class="logo">
                 <img src="./assets/logo.png" />
@@ -21,20 +20,53 @@
                 <img src="./assets/nebula.png" />
                 <h1>P R O J E C T</h1>
                 <br/>
-                <blink>coming soon...</blink>
             </div>
+            <div class="countdown">
+                <table>
+                    <tr>
+                        <td>
+                            <p id="hari"></p>
+                        </td>
+                        <td>
+                            <p id="jam"></p>
+                        </td>
+                        <td>
+                            <p id="menit"></p>
+                        </td>
+                        <td>
+                            <p id="detik"></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            HARI
+                        </td>
+                        <td>
+                            JAM
+                        </td>
+                        <td>
+                            MENIT
+                        </td>
+                        <td>
+                            DETIK
+                        </td>
+                    </tr>
+                </table>
+            </div>       
         </div>
+        <div class="footer">
+            <p>© 2023</p>
+            <img src="./assets/powered.png"/>
+        </div>
+        <div id="particles-js"></div>
     </body>
-    <footer>
-        <p>© 2023</p>
-        <img src="./assets/powered.png"/>
-    </footer>
 </html>
 
+<script src="./script/countdown.js"></script>
 <script src="./script/particles.js"></script>
 <script>
     particlesJS.load('particles-js',
-    './script/config.json',
+    './script/particles-config.json',
     function() {
         console.log('callback - particles.js config loaded');
     });
