--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
                 <img style="width: 100px;" src="./assets/title.png" />
             </div>
             <div class="menu">
-                <a href="./index.html" class="active"><button>HOME</button></a>
-                <a href="https://instagram.com/habilihsanproject"><button>INSTAGRAM</button></a>
+                <button><a href="./index.html" class="active">HOME</a></button>
+                <button><a href="https://instagram.com/habilihsanproject">INSTAGRAM</a></button>
             </div>
         </div>
         <div class="container">
