--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>habilihsanproject</title>
         <link href="./style.css" type="text/css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300" rel="stylesheet">
     </head>
     <body>
         <div class="header">
