--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -73,7 +73,7 @@
   }
   $.support.cors = true
   $.get("./databases/navbar.json", 'json', function(NavBar){
-    console.log(NavBar)
+    navbar_list = JSON.parse(NavBar)
   })
   let navbarList = document.querySelector("#navbarList")
   let navbarLink = document.getElementById("navbarLink")
