--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -72,9 +72,8 @@
     }
   }
   $.support.cors = true
-  $.get("./databases/navbar.json", 'json', function(NavBar){
-    let navbar_list = JSON.parse(NavBar)
-  })
+  let NavBar = $.get("./databases/navbar.json")
+  let navbar_list = JSON.parse(NavBar)
   NavBar()
   let navbarList = document.querySelector("#navbarList")
   let navbarLink = document.getElementById("navbarLink")
