--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -73,8 +73,8 @@
   }
   $.support.cors = true
   let NavBar = $.get("./databases/navbar.json")
+  console.log(NavBar)
   let navbar_list = JSON.parse(NavBar)
-  NavBar()
   let navbarList = document.querySelector("#navbarList")
   let navbarLink = document.getElementById("navbarLink")
   const navbar = data => {
