--- a/index.html
+++ b/index.html
@@ -231,3 +231,10 @@
     filter: brightness(50%);
   }
 </style>
+
+<script>
+// NAVBAR UPDATE
+//{ "title": "PROJECT", "to": "./pages/project.html" },
+//{ "title": "PORTOFOLIO", "to": "./portofolio.html" },
+//{ "title": "ABOUT ME", "to": "./about-me.html" }
+</script>
