--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>habilihsanproject</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width = device-width, initial-scale = 1">
+  <link href="./styles.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -42,7 +43,7 @@
         <img src="./assets/background.jpg" class="d-block w-100 filter">
         <div class="carousel-caption d-md-block project">
           <h1>nebula project</h1>
-          <h2>MARCH 1ST, 2023</h2>
+          <b>MARCH 1ST, 2023</b>
         </div>
       </div>
     </div>
@@ -133,7 +134,7 @@
           top: `${odd}%`
         }],
         {
-          duration: random*1000000,
+          duration: random*10000,
           iterations: Infinity
         }
       )
@@ -166,45 +167,6 @@
 </script>
 
 <style>
-  .navbar {
-    height: 50px;
-  }
-  .navItem {
-    width: max-content;
-    font-weight: bold;
-  }
-  .logo img {
-    width: 25px;
-    margin-bottom: 5px;
-  }
-  .white {
-    filter: invert(1);
-  }
-  .theme {
-    border: 0;
-    width: 100%;
-    text-align: right;
-    background-color: transparent;
-  }
-  footer {
-    position: relative;
-    display: flex;
-    bottom: 0;
-    margin: 5px 10px;
-    align-items: center;
-  }
-  footer img {
-    width: 150px;
-    margin-left: auto;
-  }
-  footer p {
-    margin: 0 !important;
-  }
-  /* NEBULA */
-  @font-face {
-    font-family: habilihsanproject;
-    src: url("./assets/habilihsanproject.ttf");
-  }
   .filter {
     filter: brightness(70%);
   }
@@ -212,14 +174,15 @@
     animation-name: nebula;
     animation-iteration-count: infinite;
     animation-duration: 3s;
-    font-family: habilihsanproject, sans-serif;
     text-shadow: 0 0 50px darkblue; 
     color: white !important;
     height: 70%;
     z-index: 2;
+    font-size: 3vw;
   }
   .project h1 {
-    font-size: 10vw;
+    font-family: habilihsanproject, sans-serif;
+    font-size: 10vw !important;
   }
   @keyframes nebula {
     0% , 100% { text-shadow: 0; }
