--- a/pages/portofolio.html
+++ b/pages/portofolio.html
@@ -63,7 +63,6 @@
 
 </html>
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="../script.js"></script>
 <script>
   let articles = [
@@ -87,20 +86,12 @@
     articleList.append(data(0))
   }
 
-  fetch("https://scholar.google.com/citations?user=YBt6t9EAAAAJ&hl=id", {
-    method: 'GET',    
-      withCredentials: true,    
-      crossorigin: true,    
-      mode: 'no-cors',
-  })
+  fetch("https://scholar.google.com/citations?user=YBt6t9EAAAAJ")
     .then(response => response.text())
     .then(data => {
       console.log(data)
+      console.log(document.getElementsByClassName("gsc_a_tr"))
     })
-
-    $.get("https://scholar.google.com/citations?user=YBt6t9EAAAAJ&hl=id", null, function(text){
-    alert($(text).find("gsc_a_tr"));
-});
 </script>
 
 <style>
