--- a/pages/portofolio.html
+++ b/pages/portofolio.html
@@ -65,7 +65,7 @@
 
 <script src="../script.js"></script>
 <script>
-  let articles = []
+  let articles = [{ title: null, date: null, journal: null }]
   fetch("../databases/portofolio.json")
     .then(response => response.json())
     .then(data => {
