--- a/pages/portofolio.html
+++ b/pages/portofolio.html
@@ -82,7 +82,7 @@
       return template.content.firstChild
       }
       for (i in articles) {
-    articleList.append(article(0))
+    articleList.append(article(i))
   }
   })
 </script>
