--- a/pages/portofolio.html
+++ b/pages/portofolio.html
@@ -39,7 +39,12 @@
     </nav>
     <section class="container-fluid">
       <div class="pt-5 pb-5 contain justify-content-evenly">
-        <h1 class="contain">scientific articles</h1>
+        <h1><span class="mdi mdi-panorama"></span> digital artworks</h1>
+        </div>
+    </section>
+    <section class="container-fluid">
+      <div class="pt-5 pb-5 contain justify-content-evenly">
+        <h1><span class="mdi mdi-file-document"></span> scientific articles</h1>
         <table class="table">
           <thead>
             <tr>
