--- a/pages/about.html
+++ b/pages/about.html
@@ -46,7 +46,7 @@
                     I am very interested in Science, especially Physics. I like to write scientific articles related to current interesting physics phenomena.
                     I am also interested in Programming such as developing frontend websites and making interesting programming in my spare time.
                     Then, on Graphic Design and UI Design which I also use for the needs of the website that I work on.</p>
-                <div class="d-lg-flex ">
+                <div class="d-lg-flex link">
                     <a href="mailto:h48ilihsan@gmail.com"><span class="mdi mdi-gmail contact"></span></a>
                     <a href="https://www.linkedin.com/in/h48ilihsan/"><span class="mdi mdi-linkedin contact"></span></a>
                     <a href="https://www.twitter.com/h48ilihsan/"><span class="mdi mdi-twitter contact"></span></a>
@@ -65,7 +65,7 @@
               <p>©habilihsanproject is neither a corporation nor a community, but a platform where I can present all my works from my entire life.
                 Besides that, this platform used to be given the code HI31 or commonly called HIBI which is also my nickname.
                 A little ambitious, but I hope that this platform can also build a company in the future that can accommodate all human creation.</p>
-              <div class="d-lg-flex ">
+              <div class="d-lg-flex link">
                   <a href="mailto:habilihsanproject@gmail.com"><span class="mdi mdi-gmail contact"></span></a>
                   <a href="https://www.instagram.com/habilihsanproject/"><span class="mdi mdi-instagram contact"></span></a>
                   <a href="https://www.youtube.com/@habilihsanproject/"><span class="mdi mdi-youtube contact"></span></a>
@@ -107,5 +107,8 @@
   }
   .hibi {
     word-wrap: break-word;
+  }
+  .link a {
+    color: rgba(var(--bs-tertiary-bg-rgb),var(--bs-bg-opacity))!important
   }
 </style>
