--- a/index.html
+++ b/index.html
@@ -15,28 +15,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
     integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
     crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a id="logo" class="navbar-brand logo white" href="#">
-        <img src="./assets/logo.png" />
-        <img style="width: 50px;" src="./assets/title.png" />
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav" id="navbarList">
-        </ul>
-        <button onclick="theme()" class="theme">
-          <span id="setTheme" class="mdi mdi-weather-night white"></span>
-        </button>
-      </div>
-    </div>
-  </nav>
+  <div id="navbar"></div>
   <section id="carousel" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active" id="stone">
@@ -58,6 +41,9 @@
 </html>
 
 <script>
+  $.get("./templates/navbar.html", function(data){
+            $("#navbar").replaceWith(data);
+        })
   function theme() {
     let html = document.getElementsByTagName("html")[0].dataset.bsTheme
     let set = document.getElementById("setTheme").classList
