--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </html>
 
 <script>
-  $.get("./templates/navbar.html", function(data){
+  $.get("./plugins/navbar.html", function(data){
             $("#navbar").replaceWith(data);
         })
   function theme() {
