--- a/cms/editor.html
+++ b/cms/editor.html
@@ -2,7 +2,7 @@
 <html data-bs-theme="dark">
 
 <head>
-    <title>PROJECT</title>
+    <title>EDITOR</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
     <link href="../styles.css" rel="stylesheet">
@@ -10,7 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="../plugins/wysiwyg-editor-bootstrap/wysiwyg.min.css" rel="stylesheet" />
-    <link href="../plugins/wysiwyg-editor-bootstrap/highlight.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
@@ -19,10 +18,10 @@
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../plugins/wysiwyg-editor-bootstrap/wysiwyg.min.js"></script>
-    <script src="../plugins/wysiwyg-editor-bootstrap/highlight.min.js"></script>
 </head>
 
 <body>
+    <div id="navbar"></div>
     <section class="container-fluid">
         <div class="p-5 justify-content-evenly">
             <textarea id="editor" class="form-control">
@@ -43,7 +42,9 @@
     $.get("../plugins/navbar.html", function(data){
             $("#navbar").replaceWith(data);
         })
-    $('#editor').wysiwyg()
+    $('#editor').wysiwyg({
+        debug: false
+    })
 </script>
 
 <style>
