--- a/cms/editor.html
+++ b/cms/editor.html
@@ -43,7 +43,21 @@
             $("#navbar").replaceWith(data);
         })
     $('#editor').wysiwyg({
-        debug: false
+        debug: false,
+        toolbar: [
+    ['mode'],
+    ['operations', ['undo', 'rendo', 'cut', 'copy', 'paste']],
+    ['styles'],
+    ['fonts', ['select', 'size']],
+    ['text', ['bold', 'italic', 'underline', 'strike', 'subscript', 'superscript', 'font-color', 'bg-color']],
+    ['align', ['left', 'center', 'right', 'justify']],
+    ['lists', ['unordered', 'ordered', 'indent', 'outdent']],
+    ['components', ['table', /*'chart'*/]],
+    ['intervals', ['line-height', 'letter-spacing']],
+    ['insert', ['emoji', 'link', 'image', '<a href="https://www.jqueryscript.net/tags.php?/video/">video</a>', 'symbol', /*'bookmark'*/]],
+    ['special', ['print', 'unformat', 'visual', 'clean']],
+    /*['fullscreen'],*/
+  ]
     })
 </script>
 
