--- a/cms/editor.html
+++ b/cms/editor.html
@@ -23,8 +23,7 @@
     <div id="navbar"></div>
     <section class="container-fluid">
         <div class="p-5 justify-content-evenly">
-            <textarea id="editor" class="form-control">
-            </textarea> 
+            WAIT
             </div>
             </section>
 </body>
@@ -42,23 +41,6 @@
     $.get("../plugins/navbar.html", function(data){
             $("#navbar").replaceWith(data);
         })
-    $('#editor').wysiwyg({
-        debug: false,
-        toolbar: [
-    ['mode'],
-    ['operations', ['undo', 'rendo', 'cut', 'copy', 'paste']],
-    ['styles'],
-    ['fonts', ['select', 'size']],
-    ['text', ['bold', 'italic', 'underline', 'strike', 'subscript', 'superscript', 'font-color', 'bg-color']],
-    ['align', ['left', 'center', 'right', 'justify']],
-    ['lists', ['unordered', 'ordered', 'indent', 'outdent']],
-    ['components', ['table', /*'chart'*/]],
-    ['intervals', ['line-height', 'letter-spacing']],
-    ['insert', ['emoji', 'link', 'image', '<a href="https://www.jqueryscript.net/tags.php?/video/">video</a>', 'symbol', /*'bookmark'*/]],
-    ['special', ['print', 'unformat', 'visual', 'clean']],
-    /*['fullscreen'],*/
-  ]
-    })
 </script>
 
 <style>
