--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>habilihsanproject</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width = device-width, initial-scale = 1">
-  <link href="./styles.css" rel="stylesheet">
+  <link href="./plugins/style.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
