--- a/plugins/navbar.html
+++ b/plugins/navbar.html
@@ -12,7 +12,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav" id="navbarList">
             </ul>
-            <button onclick="theme()" class="theme">
+            <button onclick="setTheme()" class="theme">
               <span id="setTheme" class="mdi mdi-weather-night white"></span>
             </button>
           </div>
