--- a/pages/project.html
+++ b/pages/project.html
@@ -37,7 +37,10 @@
           </div>
         </div>
     </nav>
-    <p style="width: 100%; text-align: center;">UNDER CONSTRUCTION</p>
+    <section class="container-fluid">
+      <div class="pt-5 pb-5 contain justify-content-evenly">
+        </div>
+        </section>
 </body>
 
 <footer>
