--- a/pages/portofolio.html
+++ b/pages/portofolio.html
@@ -99,7 +99,7 @@
             <td>${achievements[i].title}</td>
             <td>${achievements[i].date}</td>
             <td>${achievements[i].issuer}</td>
-            <td>
+            <td class="center">
               <a class="link" href="${achievements[i].link}">
                 <span class="mdi mdi-eye"></span>
               </a>
@@ -118,7 +118,7 @@
             <td>${articles[i].title}</td>
             <td>${articles[i].date}</td>
             <td>${articles[i].publlisher}</td>
-            <td>
+            <td class="center">
               <a class="link" href="${articles[i].link}">
                 <span class="mdi mdi-eye"></span>
               </a>
@@ -134,7 +134,7 @@
 </script>
 
 <style>
-  td {
+  .center {
     text-align: center;
   }
   .contain {
